# ferris-vault-tui

./: .gitignore  Cargo.toml  README.md  architecture.xml  config.yaml  todo.md
.github/workflows/: rust-ci-cd.yml
app-core/: Cargo.toml
app-core/src/: core.rs  cryptography.rs  errors.rs  lib.rs  password.rs  ports.rs  tests.rs  vault.rs
app-core/src/core/: core_errors.rs  vault_core.rs
app-core/src/cryptography/: cryptography_error.rs  uncrypted_vault.rs
app-core/src/errors/: vault_error.rs
app-core/src/password/: password_restriction.rs
app-core/src/ports/: cryptography.rs  password_generator.rs  vault_manager.rs
app-core/src/tests/: vault_core_tests.rs
app-core/src/vault/: crypted_vault.rs  key.rs  uncrypted_vault.rs
core/src/: lib.rs
core/src/ports/: cryptography.rs  vault_manager.rs
cryptography/: Cargo.toml
cryptography/src/: lib.rs  tests.rs  xchacha20poly1305.rs
cryptography/src/tests/: xchacha20poly1305_tests.rs
password-generator/: Cargo.toml
password-generator/src/: lib.rs  tests.rs
password-generator/src/tests/: password_generator_tests.rs
tui/: Cargo.toml
tui/src/: app.rs  config.rs  current_screen.rs  input_mode.rs  main.rs  mock_core.rs  state.rs  vault_entry.rs
vault-manager/: Cargo.toml
vault-manager/src/: constants.rs  error_utils.rs  http_utils.rs  lib.rs  opaque.rs  opaque_api.rs  opaque_vault_manager.rs  tests.rs  webclient.rs
vault-manager/src/tests/: http_utils_tests.rs  opaque_api_tests.rs  opaque_vault_manager_tests.rs  vault_manager_tests.rs
