[package]
name = "vault-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
core = { path = "../core" }
hex = "0.4.3"
hkdf = { version = "0.12.4", features = ["std"] }
hmac = { version = "0.12.1", features = ["std"] }
opaque-ke = { version = "4.0.1", features = ["argon2", "std"] }
rand = "0.8" # Remove when a fixed version of opaque-ke is shipped https://github.com/facebook/opaque-ke/issues/410
reqwest = { version = "0.12.24", features = ["blocking", "rustls-tls-webpki-roots"] }
sha2 = "0.10.9"
